--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Ninjacn's blog
+subtitle: 最可怕的敌人，就是没有坚强的信念 
 ---
 
 <div class="posts-list">
