修改子标题和添加照片

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Ninjacn's blog
-subtitle: 最可怕的敌人，就是没有坚强的信念 
+subtitle: Linux/PHP/Python/Devops 
 ---
 
 <div class="posts-list">
